[project]
name = "send-email-mcp"
version = "0.1.0"
description = "Resend Email MCP Server with pass-through authentication"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "neil-ac" }]
keywords = ["mcp", "llm", "resend", "email", "python"]
dependencies = [
    "black>=25.1.0",
    "fastmcp>=0.7.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.1.1",
    "pydantic[email]>=2.10.6",
]
